add github pages config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://EricMLee.github.io/GameOfLife",
+  "homepage": "https://ericmlee.github.io/GameOfLife/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
